--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@
 body {
   margin: 0;
   display: block;
-  background-color: red;
   /* Handle iOS Safari viewport */
   min-height: 100vh;
   min-height: -webkit-fill-available;
@@ -34,9 +33,9 @@ h1 {
   line-height: 1.1;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-}
+/*@media (prefers-color-scheme: light) {*/
+/*  :root {*/
+/*    color: #213547;*/
+/*    background-color: #ffffff;*/
+/*  }*/
+/*}*/
